cc_library(
    name = "hdrs",
    visibility = ["//visibility:public"],
    deps = [
        ":webgpu-hdrs",
        ":wgpu-hdrs",
    ],
)

cc_library(
    name = "wgpu-hdrs",
    hdrs = ["include/wgpu/wgpu.h"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "webgpu-hdrs",
    hdrs = ["include/webgpu-headers/webgpu.h"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib-windows-x86_64",
    srcs = ["windows-x86_64/wgpu_native.lib"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib-macos-x86_64",
    srcs = ["macos-x86_64/libwgpu_native.a"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib-ios_sim-x86_64",
    srcs = ["ios_sim-x86_64/libwgpu_native.a"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib-ios-arm64",
    srcs = ["ios-arm64/libwgpu_native.a"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib-linux-x86_64",
    srcs = ["linux-x86_64/libwgpu_native.a"],
    visibility = ["//visibility:public"],
)
